static styling done

--- a/index.html
+++ b/index.html
@@ -71,38 +71,52 @@
         </div>
     </section>
 
-    <section class="interior-gallery wrapper clearfix">
-        <div class="gallery-items">
-            <!-- <div class="gallery-item-labels">
-                <h4>air plants</h4>
-                 <p>12 items</p>
-            </div> -->
-            <img src="assets/cactus.jpg" alt="potted cactus">
+    <section class="inter-gallery wrapper clearfix">
+        <div class="gallery-flex-container">
+            <div class="gallery-left">
+                <img src="assets/cactus.jpg" alt="potted cactus">
+                <div>
+                    <a href="airplants.html">
+                        <h4>air plants</h4>
+                        <p>12 items</p>
+                    </a>
+                </div>
+            </div>
+            <div class="gallery-right">
+                <div class="gallery-top">
+                    <div class=gallery-top-l>
+                        <img src="assets/hanging-plant.jpg" alt="">
+                        <div>
+                            <a href="officeplants">
+                                <h4>office plants</h4>
+                                <p>38 items</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="gallery-top-r">
+                        <img src="assets/cube-plant.jpg" alt="">
+                        <div>
+                            <a href="houseplants.html">
+                                <h4>house plants</h4>
+                                <p>21 items</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="gallery-bottom">
+                    <img src="assets/pot-plants2.jpg" alt="">
+                    <div>
+                        <a href="pottedplants.html">
+                            <h4>plant containers</h4>
+                            <p>07 items</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <!-- <div class="gallery-inside-flex"> -->
-            <div class="gallery-items">
-                <!-- <div class="gallery-item-labels">
-                    <h4>office plants</h4>
-                    <p>38 items</p>
-                </div> -->
-                <img src="assets/hanging-plant.jpg" alt="hanging potted plant">
-            </div>
-            <div class="gallery-items">
-                <!-- <div class="gallery-item-labels">
-                    <h4>house plants</h4>
-                    <p>21 items</p>
-                </div> -->
-                <img src="assets/cube-plant.jpg" alt="plant in glass cube">
-            </div>
-        <!-- </div> -->
-            <div class="gallery-items gallery-bottom-flex">
-                <!-- <div class="gallery-item-labels">
-                    <h4>plant containers</h4>
-                    <p>07 items</p>
-                </div> -->
-                <img src="assets/pot-plants2.jpg" alt="two potted plants">
-            </div>
     </section>
+
+    
 
     <section class="pop-products wrapper">
         <h2>popular products</h2>
@@ -114,11 +128,13 @@
             </ul>
             <div class="products-gallery wrapper">
                 <div>
-                    <div>
+                    <div class="image-container">
                         <div class="gallery-overlay">
                             <!-- <a href="cart.html">add to cart</a> -->
                         </div>
-                        <p class="new">new</p>
+                        <div class="tags">
+                            <p class="new">new</p>
+                        </div>
                         <p class="hot hot1">hot</p>
                         <img src="assets/plant10.jpg" alt="potted plants">
                         <h6>Pebbeled backpack</h6>
@@ -126,7 +142,8 @@
                     </div>
                 </div>
                 <div>
-                    <div>
+                    <div class="image-container">
+                        <p class="new">new</p>
                         <img src="assets/plant2.jpg" alt="potted plant">
                         <h6>Flower print dress</h6>
                         <h5>$52.00</h5>
@@ -134,21 +151,22 @@
                 </div>
                 <div>
                     <div class="image-container">
-                        <p>-20%</p>
+                        <p class="discount">-20%</p>
                         <img src="assets/plant3.jpg" alt="plant in cube">
                         <h6>Printed cotton T-shirt </h6>
                         <h5>$56.00 <span>$79.00</span></h5>
                     </div>
                 </div>
                 <div>
-                    <div>
+                    <div class="image-container">
                         <img src="assets/plant4.jpg" alt="flowers in vase">
                         <h6>Slim-fit cotton T-shirt</h6>
                         <h5>$77.00 <span>$77.00</span></h5>
                     </div>
                 </div>
                 <div>
-                    <div>
+                    <div class="image-container">
+                        <p class="discount">-20%</p>
                         <img src="assets/plant5.jpg" alt="potted plant">
                         <h6>Zip leather jacket</h6>
                         <h5>$178.00 <span>$199.00</span></h5>
@@ -157,14 +175,14 @@
             </div>
             <div class="products-gallery products-gallery-bottom">
                 <div>
-                    <div>
+                    <div class="image-container">
                         <img src="assets/plant6.jpg" alt="hanging plant">
                         <h6>Flower print dress</h6>
                         <h5>$98.00</h5>
                     </div>
                 </div>
                 <div>
-                    <div>
+                    <div class="image-container">
                         <p class="hot hot7">hot</p>
                         <img src="assets/plant7.jpg" alt="plant in bowl">
                         <h6>Combined weekend long</h6>
@@ -172,21 +190,22 @@
                     </div>
                 </div>
                 <div>
-                    <div>
+                    <div class="image-container">
+                        <p class="discount">-20%</p>
                         <img src="assets/plant8.jpg" alt="flower">
                         <h6>Tortoiseshell retro sunglasses</h6>
                         <h5>$56.00</h5>
                     </div>
                 </div>
                 <div>
-                    <div>
+                    <div class="image-container">
                         <img src="assets/plant9.jpg" alt="plant">
                         <h6>Slim fit Patrick jeans</h6>
                         <h5>$85.00</h5>
                     </div>
                 </div>
                 <div>
-                    <div>
+                    <div class="image-container">
                         <img src="assets/plant10.jpg" alt="plant">
                         <h6>Embroidered message cap</h6>
                         <h5>$178.00 <span>$199.00</span></h5>
@@ -197,11 +216,8 @@
     </section>
 
     <section class="quote-video">
-        <div>
+        <div class="quote-video-container">
             <div class="cust-quote">
-                <div>
-                    <img src="assets/ShapeBG.jpg" alt="">
-                </div>
                 <div class="cust-blockquote">
                     <h2>what our customers are saying?</h2>
                     <div>
@@ -223,21 +239,22 @@
                             <i class="fa fa-circle" aria-hidden="true"></i>
                         </a>
                     </div>
-                    
                 </div>
             </div>
             <div class="video">
-                <div>
-                     <img src="assets/video-bg2.jpg" alt="">
-                </div>
                 <div class="video-container">
+                    <div class="play-logo">
+                        <a href="play.html">
+                            <i class="fa fa-play" aria-hidden="true"></i>
+                        </a>
+                    </div>
                     <div class="plants-logo">
                         <h2>plants</h2>
                         <img src="assets/Plants-logo.png" alt="plant logo">
                         <h2>store</h2>
-                    </div>
-                    <div>
-                        <p>amazing shop themes</p>
+                        </div>
+                           <p>amazing shop themes</p>
+                         <div>
                     </div>
                 </div>
             </div>
