--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500" rel="stylesheet">
     <title>OVER</title>
-    <link rel="shortcut icon" href="assets/Logo.png">
+    <link rel="shortcut icon" href="assets/letter-o.png">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
@@ -23,6 +23,13 @@
                         </a>
                     </li>
                 </ul>
+               <ul class="mobile-header">
+                  <li class="hamgburger">
+                     <a href="index.html">
+                        <img src="assets/Menu.png" alt="">
+                     </a>
+                  </li>
+               </ul>
             </div>
             <div>
                <div class="logo"> 
@@ -48,14 +55,14 @@
            <div>
                 <h3>over collections 2017</h3>
                 <h1>living &amp; styling with plants</h1>
-                <div class="arrows">
+                <!-- <div class="arrows">
                     <div>
                        <a href="left.html"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></a>
                     </div>
                     <div>
                         <a href="right.html"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
                     </div>
-                </div>
+                </div> -->
                 <div class="shop-now">
                     <a href="shopnow.html">shop now</a>
                 </div>
